--- a/default.htm
+++ b/default.htm
@@ -7,8 +7,8 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <title>OkaloosaGIS Map Viewer</title>
-         <link rel="stylesheet" type="text/css" href="//js.arcgis.com/3.11compact/esri/css/esri.css">
-         <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="//js.arcgis.com/3.11compact/esri/css/esri.css">
+        <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
         <!--
         <link rel="stylesheet" type="text/css" href="//gisvm101/arcgis_js_api/library/3.12/3.12/esri/css/esri.css">
@@ -24,7 +24,7 @@
 
         <div class="appHeader">
             <div class="headerLogo">
-                <img alt="logo" src="images/oc_logo_shark.png" height="28" />
+                <img alt="logo" src="images/oc_logo.png" height="28" />
             </div>
             <div class="headerTitle"  >
                 <span id="headerTitleSpan" >Okaloosa County IS/GIS</span>
@@ -42,7 +42,7 @@
             </div>
 
             <div class="headerLinks">
-                <div id="propertyDijit" style="float: left;margin: 3px 4px 2px 5px">
+                <div id="propertyDijit" style="float: left;margin: 3px 4px 2px 5px;padding:0px 15px 0px 0px;">
                 </div>
 
                 <div id="helpDijit" style="float: right;margin: 3px 4px 2px 5px">
