--- a/default.htm
+++ b/default.htm
@@ -42,6 +42,9 @@
             </div>
 
             <div class="headerLinks">
+
+               <div id="spatialDijit" style="float: left;margin: 3px 4px 2px 5px;padding:0px 15px 0px 0px;"> </div>
+
                 <div id="propertyDijit" style="float: left;margin: 3px 4px 2px 5px;padding:0px 15px 0px 0px;">
                 </div>
 
@@ -60,6 +63,54 @@
 -->
 
         <script type="text/javascript">
+
+           var timerStart =  (new Date()).getTime();
+           var ptmrSt =null;
+           if (performance)
+                ptmrSt = performance.now();
+
+
+           console.clear();
+
+
+
+			if(typeof String.prototype.trim !== 'function') {
+			  String.prototype.trim = function() { return this.replace(/^\s+|\s+$/g, ''); }
+			}
+			if (!Array.prototype.indexOf) {
+				Array.prototype.indexOf = function(obj, start) {
+					 for (var i = (start || 0), j = this.length; i < j; i++) {
+						 if (this[i] === obj) { return i; }
+					 }
+					 return -1;
+				}
+			}
+
+
+		// Avoid `console` errors in browsers that lack a console.
+		(function() {
+			var method;
+			var noop = function () {};
+			var methods = [
+				'assert', 'clear', 'count', 'debug', 'dir', 'dirxml', 'error',
+				'exception', 'group', 'groupCollapsed', 'groupEnd', 'info', 'log',
+				'markTimeline', 'profile', 'profileEnd', 'table', 'time', 'timeEnd',
+				'timeStamp', 'trace', 'warn'
+			];
+			var length = methods.length;
+			var console = (window.console = window.console || {});
+
+			while (length--) {
+				method = methods[length];
+
+				// Only stub undefined methods.
+				if (!console[method]) {
+					console[method] = noop;
+				}
+			}
+		}());
+
+
 
             var dojoConfig = {
                 async: true,
