--- a/default.htm
+++ b/default.htm
@@ -47,7 +47,10 @@
 
                 <div id="propertyDijit" style="float: left;margin: 3px 4px 2px 5px;padding:0px 15px 0px 0px;">
                 </div>
-
+                <div id="drawDijit" style="display:none;float: left;margin: 3px 4px 2px 5px;padding:0px 15px 0px 0px;">
+                </div>
+                <div id="measureDijit" style="display:none;float: left;margin: 3px 4px 2px 5px;padding:0px 15px 0px 0px;">
+                </div>
                 <div id="helpDijit" style="float: right;margin: 3px 4px 2px 5px">
                 </div>
 
