TOC Layout fixes

--- a/default.htm
+++ b/default.htm
@@ -8,16 +8,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <title>OkaloosaGIS Map Viewer</title>
         <link rel="stylesheet" type="text/css" href="//js.arcgis.com/3.11compact/esri/css/esri.css">
-        <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
+       <!--<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">-->
+      <link rel="stylesheet" type="text/css" href="//gisvm109/font-awesome-4.3.0/css/font-awesome.min.css">
         <!--
         <link rel="stylesheet" type="text/css" href="//gisvm101/arcgis_js_api/library/3.12/3.12/esri/css/esri.css">
-        <link rel="stylesheet" type="text/css" href="//gisvm109/font-awesome-4.3.0/css/font-awesome.min.css">
+
         -->
 
 
         <link rel="stylesheet" type="text/css" href="css/theme/dbootstrap/dbootstrap.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <!--
+   <link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.0/js/esri/dijit/css/Popup.css" />
+  <link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.0/js/dojo/dojox/layout/resources/FloatingPane.css" />
+  -->
+  <link rel="stylesheet" type="text/css" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.0/js/dojo/dojox/layout/resources/ResizeHandle.css" />
 
     </head>
     <body class="dbootstrap">
